# RVEmitter

./: compile.sh  meson.build  readme.md  sanitize.sh
core/inc/common/: basic_block.hpp  common.hpp  task_if.hpp
core/inc/emitter/: emitter_if.hpp
core/inc/emitter/arch/rv32/: rv32e_emitter.hpp
core/inc/regalloc/: regalloc_if.hpp
core/inc/regalloc/arch/rv32/: rv32e_regalloc.hpp
core/src/regalloc/arch/rv32/: rv32e_regalloc.cpp
test/: main.cpp
test/simple/: simple.cpp  simple.hpp
